RESOLVED FIXED173221
[preload] Fix builds with ENABLE_VIDEO_TRACK set to false
https://bugs.webkit.org/show_bug.cgi?id=173221
Summary [preload] Fix builds with ENABLE_VIDEO_TRACK set to false
Yoav Weiss
Reported 2017-06-09 21:46:02 PDT
[preload] Fix builds with ENABLE_VIDEO_TRACK set to false
Attachments
Patch (1.68 KB, patch)
2017-06-09 21:48 PDT, Yoav Weiss
no flags
Yoav Weiss
Comment 1 2017-06-09 21:48:08 PDT
Yoav Weiss
Comment 2 2017-06-09 21:58:01 PDT
Comment on attachment 312561 [details] Patch Thanks for reviewing! :)
WebKit Commit Bot
Comment 3 2017-06-09 22:11:18 PDT
Comment on attachment 312561 [details] Patch Clearing flags on attachment: 312561 Committed r218045: <http://trac.webkit.org/changeset/218045>
WebKit Commit Bot
Comment 4 2017-06-09 22:11:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.