[preload] Fix builds with ENABLE_VIDEO_TRACK set to false https://bugs.webkit.org/show_bug.cgi?id=173221

Reviewed by Chris Dumez.

https://bugs.webkit.org/show_bug.cgi?id=173047 introduced a build error for builds with video track support disabled.
This fixes that build issue.

No new tests since there's no functional change.

* html/HTMLLinkElement.cpp:
(WebCore::HTMLLinkElement::as):


Canonical link: https://commits.webkit.org/190057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218045 268f45cc-cd09-0410-ab3c-d52691b4dbfc